// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`search-case-officer GET /search-case-officer should re-render the search case officer page with the expected error message if a CO is not provided 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#user">Enter a case officer</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"></div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <form method="post" novalidate class="govuk-!-margin-bottom-5">
                <div class="govuk-form-group govuk-form-group--error">
                    <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-fieldset__legend--l" for="users"> Case officer</label></h1>
                    <p id="users-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Enter a case officer</p>
                    <select                     class="govuk-select accessible-autocomplete govuk-select--error" id="users"
                    name="user" aria-describedby="users-error" data-cy="search-users">
                        <option value=""></option>
                        <option value="{&quot;@odata.type&quot;:&quot;#microsoft.graph.user&quot;,&quot;id&quot;:&quot;923ac03b-9031-4cf4-8b17-348c274321f9&quot;,&quot;name&quot;:&quot;Smith, John&quot;,&quot;email&quot;:&quot;John.Smith@planninginspectorate.gov.uk&quot;}">Smith, John (John.Smith@planninginspectorate.gov.uk)</option>
                        <option value="{&quot;@odata.type&quot;:&quot;#microsoft.graph.user&quot;,&quot;id&quot;:&quot;2&quot;,&quot;name&quot;:&quot;Doe, Jane&quot;,&quot;email&quot;:&quot;Jane.Doe@planninginspectorate.gov.uk&quot;}">Doe, Jane (Jane.Doe@planninginspectorate.gov.uk)</option>
                        <option value="{&quot;@odata.type&quot;:&quot;#microsoft.graph.user&quot;,&quot;id&quot;:&quot;3&quot;,&quot;name&quot;:&quot;Bloggs, Joe&quot;,&quot;email&quot;:&quot;Joe.Bloggs@planninginspectorate.gov.uk&quot;}">Bloggs, Joe (Joe.Bloggs@planninginspectorate.gov.uk)</option>
                        <option value="{&quot;@odata.type&quot;:&quot;#microsoft.graph.user&quot;,&quot;id&quot;:&quot;4&quot;,&quot;name&quot;:&quot;Jenkins, Leeroy&quot;,&quot;email&quot;:&quot;Leeroy.Jenkins@planninginspectorate.gov.uk&quot;}">Jenkins, Leeroy (Leeroy.Jenkins@planninginspectorate.gov.uk)</option>
                        <option                         value="{&quot;@odata.type&quot;:&quot;#microsoft.graph.user&quot;,&quot;id&quot;:&quot;abac693e-4332-4a02-bb21-af05b9fee854&quot;,&quot;name&quot;:&quot;McTest, George&quot;,&quot;email&quot;:&quot;George.McTest@planninginspectorate.gov.uk&quot;}">McTest, George (George.McTest@planninginspectorate.gov.uk)</option>
                            </select>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Update case officer</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`search-case-officer GET /search-case-officer should render the search for case officer page with expected content 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"></div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <form method="post" novalidate class="govuk-!-margin-bottom-5">
                <div class="govuk-form-group">
                    <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-fieldset__legend--l" for="users"> Case officer</label></h1>
                    <select class="govuk-select accessible-autocomplete" id="users" name="user"
                    data-cy="search-users">
                        <option value=""></option>
                        <option value="{&quot;@odata.type&quot;:&quot;#microsoft.graph.user&quot;,&quot;id&quot;:&quot;923ac03b-9031-4cf4-8b17-348c274321f9&quot;,&quot;name&quot;:&quot;Smith, John&quot;,&quot;email&quot;:&quot;John.Smith@planninginspectorate.gov.uk&quot;}">Smith, John (John.Smith@planninginspectorate.gov.uk)</option>
                        <option value="{&quot;@odata.type&quot;:&quot;#microsoft.graph.user&quot;,&quot;id&quot;:&quot;2&quot;,&quot;name&quot;:&quot;Doe, Jane&quot;,&quot;email&quot;:&quot;Jane.Doe@planninginspectorate.gov.uk&quot;}">Doe, Jane (Jane.Doe@planninginspectorate.gov.uk)</option>
                        <option value="{&quot;@odata.type&quot;:&quot;#microsoft.graph.user&quot;,&quot;id&quot;:&quot;3&quot;,&quot;name&quot;:&quot;Bloggs, Joe&quot;,&quot;email&quot;:&quot;Joe.Bloggs@planninginspectorate.gov.uk&quot;}">Bloggs, Joe (Joe.Bloggs@planninginspectorate.gov.uk)</option>
                        <option value="{&quot;@odata.type&quot;:&quot;#microsoft.graph.user&quot;,&quot;id&quot;:&quot;4&quot;,&quot;name&quot;:&quot;Jenkins, Leeroy&quot;,&quot;email&quot;:&quot;Leeroy.Jenkins@planninginspectorate.gov.uk&quot;}">Jenkins, Leeroy (Leeroy.Jenkins@planninginspectorate.gov.uk)</option>
                        <option                         value="{&quot;@odata.type&quot;:&quot;#microsoft.graph.user&quot;,&quot;id&quot;:&quot;abac693e-4332-4a02-bb21-af05b9fee854&quot;,&quot;name&quot;:&quot;McTest, George&quot;,&quot;email&quot;:&quot;George.McTest@planninginspectorate.gov.uk&quot;}">McTest, George (George.McTest@planninginspectorate.gov.uk)</option>
                    </select>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Update case officer</button>
            </form>
        </div>
    </div>
</main>"
`;
